// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
}

<button
    class="sui-box emotion-0"
    disabled=""
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly on focus 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-0:active {
  opacity: 0.7;
}

<button
    class="sui-box emotion-0"
    tabindex="0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly with a non default as and type 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

<div
    class="sui-box emotion-0"
    type="button"
  >
    Button Touchable
  </div>
</DocumentFragment>
`;

exports[`Touchable renders correctly with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

<button
    class="sui-box emotion-0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;
